.metadata/.plugins/org.eclipse.cdt.ui/ADC_V1.build.log
16:59:58 **** Build of configuration Debug for project ADC_V1 ****
make -j8 all 
arm-none-eabi-gcc "../Src/ADCMAIN_V1.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DNUCLEO_F411RE -DSTM32 -DSTM32F4 -DSTM32F411RETx -DSTM32F411xE -c -I../Inc -I"/home/jutoroa/workspace/STMDirectory/DriversSTM32/Inc" -I/home/jutoroa/workspace/STMDirectory/mcu_headers/CMSIS/Device/ST/STM32F4xx/Include -I/home/jutoroa/workspace/STMDirectory/mcu_headers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Src/ADCMAIN_V1.d" -MT"Src/ADCMAIN_V1.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Src/ADCMAIN_V1.o"
../Src/ADCMAIN_V1.c:36:20: error: 'ADC_SIGNAL_SIZE' undeclared here (not in a function)
   36 | uint16_t adcSignal[ADC_SIGNAL_SIZE] = {0}; // Almacenamiento para los datos del ADC
      |                    ^~~~~~~~~~~~~~~
make: *** [Src/subdir.mk:25: Src/ADCMAIN_V1.o] Error 1
"make -j8 all" terminated with exit code 2. Build might be incomplete.

16:59:59 Build Failed. 2 errors, 0 warnings. (took 524ms)

